# CaptionGenerator

./: .gitignore  README.md
backend/: .env.example  README.md  ai_providers.py  list_models.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/schemas/: __init__.py  caption_response.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: captions.py  health.py
backend/app/application/: __init__.py
backend/app/application/usecases/: generate_caption.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/domain/: __init__.py  entities.py  errors.py  ports.py  prompts.py  value_objects.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/providers/: factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
frontend/src/: App.css  App.jsx  index.css
